workaround for nonworking hibernate

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -12,3 +12,4 @@ log_path = ./ansible.log
 deprecation_warnings = False
 error_on_missing_handler = True
 verbosity = 1
+remote_tmp = /tmp/.ansible/tmp
