Sleep related finalized.

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,6 @@
 [defaults]
+display_skipped_hosts = false
+display_ok_hosts = false
 inventory = inventory.yml
 roles_path = roles
 remote_user = ansible
