Added scanner service

--- a/ansible/roles/print-server/tasks/main.yml
+++ b/ansible/roles/print-server/tasks/main.yml
@@ -69,3 +69,6 @@
 - name: Configure dynamic weekly test print job
   import_tasks: test-print.yml
   tags: testprint
+
+- name: Include validate tasks
+  include_tasks: scan.yml
