--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,8 +1,8 @@
 # roles/common/tasks/main.yml
 - name: Include apt update task
-  ansible.builtin.import_tasks: update_apt.yml
+  include_tasks: update_apt.yml
 - name: Upgrade all packages
-  ansible.builtin.import_tasks: upgrade_apt.yml
+  include_tasks: upgrade_apt.yml
 - name: Ensure common packages are installed
   ansible.builtin.apt:
     name:
@@ -14,4 +14,4 @@
     state: present
     update_cache: yes
 - name: PURGE apt cache
-  ansible.builtin.import_tasks: purge_apt.yml
+  include_tasks: purge_apt.yml
