--- a/ansible/playbooks/upgrade-to-pve8.yml
+++ b/ansible/playbooks/upgrade-to-pve8.yml
@@ -1,9 +1,8 @@
 ---
-
 - name: Upgrade Proxmox VE from 7.x to 8.x
   hosts: all
   become: true
   gather_facts: false
   roles:
-    - upgrade
+    - upgrade-to-pve8
 
