Intermediate Commit for workstation.

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,6 +3,7 @@ display_skipped_hosts = false
 display_ok_hosts = false
 inventory = inventory.yml
 roles_path = roles
+playbook_dir = playbooks/
 remote_user = ansible
 private_key_file = ~/.ssh/id_ansible_ed25519
 host_key_checking = False    
