--- a/ansible/group_vars/all/all.yml
+++ b/ansible/group_vars/all/all.yml
@@ -1,4 +1,5 @@
-###ansible/group_vars/all
+#ansible/group_vars/all
+
 fallback_root_password: "{{ vault_root_password }}"
 samba_users: "{{ vault_samba_users }}"
 cups_admins: "{{vault_cups_admins}}"
@@ -6,3 +7,4 @@ cups_admins: "{{vault_cups_admins}}"
 #Template default/fallback user configuration
 template_default_user : "{{ vault_default_user }}"
 template_default_password : "{{ vault_root_password }}"
+
