--- a/ansible/group_vars/pve_servers.yml
+++ b/ansible/group_vars/pve_servers.yml
@@ -1,4 +1,4 @@
-# group_vars/pve-main.yml
+# group_vars/pve_main.yml
 ---
 nfs_export_subnet: 192.168.0.0/24
 nfs_export_options: rw,sync,no_subtree_check,no_root_squash
