--- a/ansible/roles/create-workstation-ubuntu/tasks/main.yml
+++ b/ansible/roles/create-workstation-ubuntu/tasks/main.yml
@@ -1,11 +1,21 @@
 # tasks file for ansible/roles/create-vm-desktop/
 
+- name: Set hostname from inventory
+  hostname:
+    name: "{{ hostvars[inventory_hostname].hostname }}"
 
-- name: Install Ubuntu Desktop Environment
-  apt:
-    name: ubuntu-desktop
-    state: present
-    update_cache: true
+# - name: Install Ubuntu Desktop Environment
+#   apt:
+#     name: ubuntu-desktop
+#     state: present
+#     update_cache: true
+
+- name: Set systemd default target to graphical
+  file:
+    src: /lib/systemd/system/graphical.target
+    dest: /etc/systemd/system/default.target
+    state: link
+    force: true
 
 - name: Install additional GUI tools
   apt:
@@ -16,9 +26,73 @@
       - gedit
     state: present
 
-- name: Set systemd default target to graphical
-  file:
-    src: /lib/systemd/system/graphical.target
-    dest: /etc/systemd/system/default.target
-    state: link
-    force: true
+- name: Ensure apt cache is updated
+  apt:
+    update_cache: true
+    cache_valid_time: 3600
+
+- name: Install required dependencies for 3rd-party apps
+  apt:
+    name:
+      - wget
+      - software-properties-common
+      - apt-transport-https
+      - gnupg
+    state: present
+
+# Microsoft Edge
+- name: Download Microsoft Edge .deb package
+  get_url:
+    url: https://packages.microsoft.com/repos/edge/pool/main/m/microsoft-edge-stable/microsoft-edge-stable_{{ edge_version | default('latest') }}_amd64.deb
+    dest: /tmp/edge.deb
+    mode: '0644'
+
+- name: Install Microsoft Edge
+  apt:
+    deb: /tmp/edge.deb
+
+# KiCad
+- name: Install KiCad
+  apt:
+    name: kicad
+    state: present
+
+# Visual Studio Code
+- name: Add VS Code GPG key
+  apt_key:
+    url: https://packages.microsoft.com/keys/microsoft.asc
+    state: present
+
+- name: Add VS Code repository
+  apt_repository:
+    repo: deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main
+    state: present
+    filename: vscode
+
+- name: Install VS Code
+  apt:
+    name: code
+    state: present
+
+# LibreOffice
+- name: Install LibreOffice
+  apt:
+    name: libreoffice
+    state: present
+
+# Notepad++ via Wine
+- name: Ensure Wine is installed
+  apt:
+    name: wine64
+    state: present
+
+- name: Download Notepad++ installer
+  get_url:
+    url: https://github.com/notepad-plus-plus/notepad-plus-plus/releases/download/v8.6.5/npp.8.6.5.Installer.exe
+    dest: /tmp/npp_installer.exe
+
+- name: Install Notepad++ using Wine
+  command: wine /tmp/npp_installer.exe /S
+  args:
+    creates: ~/.wine/drive_c/Program\ Files/Notepad++/notepad++.exe
+  become: false
