ws-ubuntu working and documented in server.odt

--- a/ansible/roles/create-vms/tasks/main.yml
+++ b/ansible/roles/create-vms/tasks/main.yml
@@ -1,3 +1,4 @@
 # tasks file for roles/create-vms
 - name: Include tasks for creating VMs
   include_tasks: workstation-ubuntu.yml
+  tags: ws-ubuntu
