--- a/ansible/host_vars/pve1.yml
+++ b/ansible/host_vars/pve1.yml
@@ -1,7 +1,9 @@
 # host_vars/pve1.yml
 
 #Default template ID to be used for creating new VMs 
-template_vm_id: 900  
+template_vm_id: 900
+ws_ubuntu_template_vm_id: 1000
+
 
 # Workstation VM ID
 ws_ubuntu_vm_id: 115  # VM ID for the workstation Ubuntu VM
