--- a/ansible/roles/create-vms/defaults/main.yml
+++ b/ansible/roles/create-vms/defaults/main.yml
@@ -1,5 +1,4 @@
-
-# defaults file for roles/create-vms
+# ansible/roles/create-vms/defaults/main.yml
 vm_disk_size: 128G  # in GB (for qm resize)
 vm_cores: 4
-vm_memory: 4096     # in MB
+vm_memory: 8192     # in MB
