--- a/ansible/roles/create-workstation-ubuntu/handlers/main.yml
+++ b/ansible/roles/create-workstation-ubuntu/handlers/main.yml
@@ -1,2 +1,6 @@
----
 # handlers file for ansible/roles/create-vm-desktop/
+- name: Ensure reboot after desktop install
+  reboot:
+    msg: "Rebooting after installing"
+    pre_reboot_delay: 10
+    reboot_timeout: 300
