--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -15,6 +15,9 @@ log_path = ./ansible.log
 deprecation_warnings = False
 error_on_missing_handler = True
 verbosity = 1
-#remote_tmp = /tmp/.ansible/tmp
+remote_tmp = /tmp/.ansible/tmp
+
+vault_password_file = ~/.ansible/vault-pass
+
 
 
