--- a/ansible/playbooks/bootstrap.yml
+++ b/ansible/playbooks/bootstrap.yml
@@ -6,3 +6,8 @@
     - bootstrap
     - harden
     - common
+
+
+
+#For new server's this seems to bootstrap ansible user well. No need to manual copy keys, assuming root log in is still enabled.
+#ansible-playbook playbooks/bootstrap.yml -u root -l pve2 --ask-become-pass
