--- a/ansible/roles/provision-vm-docker/tasks/main.yml
+++ b/ansible/roles/provision-vm-docker/tasks/main.yml
@@ -8,25 +8,14 @@
 
 - name: Install Docker
   include_tasks: install-docker.yml
-
-- name: Deploy Portainer
-  include_tasks: deploy-portainer.yml
-
-- name: Deploy Portainer CE Agent
-  include_tasks: deploy-portainerce-agent.yml
-
-- name: Deploy Containers
-  include_tasks: deploy-nginx-rpm.yml
-
-- name: Deploy Containers
   include_tasks: deploy-rustdesk.yml
-
-# - name: Deploy Minecraft container
-#   include_tasks: deploy-minecraft.yml
-
-- name: Deploy CS:GO container
-  include_tasks: deploy-counterstrike.yml
-
-- name: Deploy Veloren container
+  include_tasks: deploy-portainer.yml
+  include_tasks: deploy-portainerce-agent.yml
+  include_tasks: deploy-npm.yml
   include_tasks: deploy-veloren.yml
+  include_tasks: deploy-minecraft.yml
+  include_tasks: deploy-adguard.yml
+
+# - name: Deploy CS:GO container
+#   include_tasks: deploy-counterstrike.yml
 
