--- a/ansible/roles/provision-vm-docker/defaults/main.yml
+++ b/ansible/roles/provision-vm-docker/defaults/main.yml
@@ -44,3 +44,10 @@ adguard_bridge_ports:
   - "5443:5443/udp"
 
 timezone: "America/New_York"
+
+
+#Homepage
+
+homepage_project_dir: "{{docker_project_dir}}/homepage"
+homepage_config_dir: "{{ homepage_project_dir }}/config"
+homepage_sock_dir: "{{ homepage_project_dir }}/var/run.docker.sock"
