made the zfs role nc to work

--- a/ansible/group_vars/all/all.yml
+++ b/ansible/group_vars/all/all.yml
@@ -5,18 +5,26 @@ samba_users: "{{ vault_samba_users }}"
 cups_admins: "{{vault_cups_admins}}"
 
 #Template default/fallback user configuration
-template_default_user : "{{ vault_default_user }}"
+template_default_user :     "{{ vault_default_user }}"
 template_default_password : "{{ vault_root_password }}"
 
 #VM configuration
-vm_gateway: 192.168.10.1
-vm_dns: 1.1.1.1
+vm_ip_prefix: "192.168.10."
+vm_gateway: "{{ vm_ip_prefix }}1"
+# or
+# vm_gateway: "{{ vm_ip_prefix ~ '1' }}"
+vm_dns: 9.9.9.9
+
+old_key_file_path_on_localhost: /home/rumie/.ssh/known_hosts
+
+# default_vm_id:          999
+# default_vm_ip:          "{{ vm_ip_prefix }}100"
+# default_vm_disk_size:   16G
+# default_vm_cores:       1
+# default_vm_memory:      1024
 
 # Bootstrap user configuration
 #bootstrap_user: "{{ vault_default_user }}"
 #ansible_default_user: ansible
 #bootstrap_password: "{{ vault_default_password }}" 
 #bootstrap_ssh_private_key_file: ~/.ssh/id_ed25519
-
-
-old_key_file_path_on_localhost: /home/rumie/.ssh/known_hosts
