--- a/ansible/roles/provision-vm-workstattion/tasks/main.yml
+++ b/ansible/roles/provision-vm-workstattion/tasks/main.yml
@@ -1,13 +1,12 @@
 # roles/create-vms/tasks/main.yml
 
 
-- name: Set facts
-  include_tasks: set-facts.yml 
-
 
 - name: Clone VM from template
   include_tasks: clone-vm.yml
 
+- name: Remove old SSH key
+  include_tasks: remove-old-key.yml
 
 - name: Provision VM
   include_tasks: provision-vm.yml
@@ -15,6 +14,7 @@
 - name: Start VM if not running
   include_tasks: check-status-vm.yml
 
-- name: Remove old SSH key
-  include_tasks: remove-old-key.yml
+# - name: Set hostname
+#   include_tasks: set-hostname.yml 
+#   tags: set_hostname
 
