--- a/ansible/roles/provision-vm/tasks/check-status-vm.yml
+++ b/ansible/roles/provision-vm/tasks/check-status-vm.yml
@@ -9,11 +9,17 @@
   command: qm start {{ vm_id }}
   when: "'status: stopped' in vm_status.stdout"
 
+
+
 - name: Wait for VM {{ vm_id }} to respond to ping
   wait_for:
-    host: "{{ hostvars[target_hosts].ansible_host }}"
+    host: "{{ hostvars[target_vm].ansible_host }}"
     port: 22
     state: started
     timeout: 300
-  delegate_to: localhost
+  delegate_to: "{{ inventory_hostname }}"  #localhost
   become: false
+
+# - assert:
+#     that: hostvars[target_vm].ansible_host is defined
+#     fail_msg: "ansible_host missing for {{ target_vm }}"
