--- a/ansible/host_vars/pve2.yml
+++ b/ansible/host_vars/pve2.yml
@@ -1,21 +1,14 @@
-# host_vars/pve.yml
-
-#Default template ID to be used for creating new VMs 
-#template_vm_id: 900
-#ws_ubuntu_template_vm_id: 1000
-
-
 # Define VM IDs for specific VMs
 #TODO others
 opnsense1_vm_id:  1
 #ws_ubuntu_vm_id:  115 
 #pve2_vm_id:       110
-pve1_vm_id:       111
-samba1_vm_id:     120
-cups1_vm_id:      121
-docker1_vm_id:    122
-sane1_vm_id:      123
-nextcloud1_vm_id: 124
+# pve1_vm_id:       111
+# samba1_vm_id:     120
+# cups1_vm_id:      121
+# docker1_vm_id:    122
+# sane1_vm_id:      123
+# nextcloud1_vm_id: 124
 
 
 
