--- a/ansible/roles/bootstrap/defaults/main.yml
+++ b/ansible/roles/bootstrap/defaults/main.yml
@@ -1,3 +1,12 @@
----
-bootstrap_user: ansible
-bootstrap_user_key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ansible_ed25519.pub') }}"
+# Packages & timezone
+default_bootstrap_packages:
+  - sudo
+  - wget
+  - unzip
+  - tmux
+  - python3
+  - python3-pip
+  - rsync
+  - gnupg
+  - openssh-server
+default_bootstrap_timezone: "America/New_York"
