--- a/ansible/roles/common/harden/tasks/main.yml
+++ b/ansible/roles/common/harden/tasks/main.yml
@@ -1,11 +1,12 @@
-
 - include_tasks: fail2ban.yml
+
 - include_tasks: harden-ssh.yml
 
-- block:
-    - include_tasks:  "{{ item }}"
-      loop:
-        - install-unattended-upgrades.yml
-        - automatic-updates.yml
-        - enable-timers.yml
-      when: unattended_upgrades_enabled | bool
+- include_tasks: install-unattended-upgrades.yml
+  when: unattended_upgrades_enabled | bool
+
+- include_tasks: automatic-updates.yml
+  when: unattended_upgrades_enabled | bool
+
+- include_tasks: enable-timers.yml
+  when: unattended_upgrades_enabled | bool
