Added Nextcloud container and seems working with in http.

--- a/ansible/group_vars/all/all.yml
+++ b/ansible/group_vars/all/all.yml
@@ -1,6 +1,8 @@
 #ansible/group_vars/all
 
 fallback_root_password: "{{ vault_root_password }}"
+mysql_root_password: "{{ vault_root_password }}"
+
 
 samba_users: "{{ vault_samba_users }}"
 
