--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,7 +2,7 @@
 display_skipped_hosts = false
 display_ok_hosts = false
 inventory = inventory.yml
-roles_path = roles
+roles_path = roles/vm: roles/pve: roles/common: roles/helper
 playbook_dir = playbooks/
 remote_user = ansible
 private_key_file = ~/.ssh/id_ansible_ed25519
@@ -15,7 +15,7 @@ log_path = ./ansible.log
 deprecation_warnings = False
 error_on_missing_handler = True
 verbosity = 1
-remote_tmp = /tmp/.ansible/tmp
+#remote_tmp = /tmp/.ansible/tmp2
 
 vault_password_file = ~/.ansible/vault-pass
 
