Nginx and nextcloud working with external domains

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,7 +2,7 @@
 display_skipped_hosts = false
 display_ok_hosts = false
 inventory = inventory.yml
-roles_path = roles/vm: roles/pve: roles/common: roles/helper
+roles_path =  roles/pve: roles/vm: roles/common: roles/helper
 playbook_dir = playbooks/
 remote_user = ansible
 private_key_file = ~/.ssh/id_ansible_ed25519
