--- a/ansible/roles/vm/provision-vm-docker/tasks/main.yml
+++ b/ansible/roles/vm/provision-vm-docker/tasks/main.yml
@@ -10,7 +10,7 @@
   include_tasks: install-docker.yml
   include_tasks: deploy-rustdesk.yml
   include_tasks: deploy-portainer.yml
-  include_tasks: deploy-portainerce-agent.yml
+  include_tasks: deploy-portainer-agent.yml
   include_tasks: deploy-npm.yml
   include_tasks: deploy-veloren.yml
   include_tasks: deploy-minecraft.yml
